# HTTP_API

./: README.md
GS-HUB/: .gitignore  requirements.txt
GS-HUB/configs/: config.yaml
GS-HUB/ros2_ws/src/common_utils/: pyproject.toml  setup.cfg
GS-HUB/ros2_ws/src/common_utils/common_utils/: __init__.py  config_utils.py  coordinate_manipulator.py  serialize_utils.py  timer.py  vecdb_utils.py
GS-HUB/ros2_ws/src/hub_interface/: CMakeLists.txt  package.xml
GS-HUB/ros2_ws/src/hub_interface/msg/: SemanticData.msg  SensoryData.msg
GS-HUB/ros2_ws/src/hub_interface/srv/metacam_service/: DistortionRemoval.srv  PointsFusion.srv  SemanticInfo.srv
GS-HUB/ros2_ws/src/semantic_map_builder/: package.xml  setup.cfg  setup.py
GS-HUB/ros2_ws/src/semantic_map_builder/semantic_map_builder/: __init__.py  semantic_map_builder.py  semantic_map_manager.py  test_map_build.py  test_map_builder.py
GS-HUB/ros2_ws/src/semantic_navigation/: package.xml  setup.cfg  setup.py
GS-HUB/ros2_ws/src/simulate_publish/: package.xml  setup.cfg  setup.py
GS-HUB/ros2_ws/src/simulate_publish/simulate_publish/: left_img_publish.py  odom_publish.py  pc_publish.py  right_img_publish.py
GS-HUB/ros2_ws/src/skyland_metacam/: package.xml  setup.cfg  setup.py
GS-HUB/ros2_ws/src/skyland_metacam/skyland_metacam/: api_object_detection.py  api_skyland.py  metacam_service.py  metacam_subscriber.py  test_metacam_service.py
GS-HUB/ros2_ws/src/unitree_control/: package.xml  setup.cfg  setup.py
GS-HUB/ros2_ws/src/unitree_control/unitree_control/: go2_nav_sport.py
GS-HUB/static/: calibration.json
(+24 files in other folders)
