[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "common_utils"
version = "0.1.0"
description = "A common utilities library for Python projects"
authors = [
    { name = "gs", email = "your_email@example.com" }
]
license = { text = "MIT" }
dependencies = ["qdrant_client"]  
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[tool.setuptools.packages.find]
include = ["*"]