[metadata]
name = common_utils
version = 0.1.0
description = A common utilities library for Python projects
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
author_email = your_email@example.com
license = MIT
classifiers =
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
zip_safe = False
install_requires =
    qdrant_client
    # 在这里添加你的依赖库，例如：
    # numpy>=1.21.0
    # pandas>=1.3.0

[options.packages.find]
where = .
include = common_utils*
exclude =
    tests
    docs

[options.extras_require]
# 如果有额外的依赖，例如开发或测试依赖，可以在这里定义
dev =
    pytest>=6.0
    flake8>=4.0